--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -10,6 +10,7 @@ h1, h2,h3,h4{
   margin: 0;
   margin: 40px 0 15px;
   color: black;
+  letter-spacing: 0.6px;
 }
 
 h3{
@@ -23,6 +24,7 @@ p {
   line-height: 1.8em;
   color: #2d2727;
   margin-bottom: 26px;
+  letter-spacing: 0.6px;
 }
 
 ol,ul {
