--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -3,7 +3,7 @@ body {
 }
 
 
-h1, h2,h3,h4{
+h1, h2,h3, h4, h5, h6 {
   font-weight: bold;
   font-size: 22px;
   color: #2d2727;
@@ -11,6 +11,10 @@ h1, h2,h3,h4{
   margin: 40px 0 15px;
   color: black;
   letter-spacing: 0.6px;
+}
+
+h1{
+  font-size: 30px;
 }
 
 h3{
