--- a/src/pages/profile.scss
+++ b/src/pages/profile.scss
@@ -12,8 +12,9 @@
 
     .mylogo{
       border-radius: 20px;
-      width:256px;
-      height:256px;
+      width:166px;
+      height:166px;
+      margin:0;
     }
 
     .content{
@@ -30,8 +31,8 @@
   }
   .contact{
     .qrcode{
-        width:256px;
-        height:256px; 
+        width:166px;
+        height:166px; 
       }
    .contactRow{
      font-size: 18px;
