--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -25,6 +25,8 @@
    border-radius: 10px 10px 0 0; 
    width:100%;
    height:250px;
+   object-fit: cover;
+  //  clip-path: inset(20px 20px 30px 40px);
   }
   .content{
     padding: 16px;
