--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -25,7 +25,7 @@
    border-radius: 10px 10px 0 0; 
    width:100%;
    height:250px;
-   object-fit: cover;
+   object-fit: fill;
   //  clip-path: inset(20px 20px 30px 40px);
   }
   .content{
