--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -50,3 +50,12 @@ a{
     opacity: 0.8;
   }
 }
+
+blockquote{
+  margin-left: 0;
+  border-left:0.32813rem solid hsla(141, 29%, 51%, 0.9);
+
+  p{
+    color: #4a5d4a;
+  }
+}
