--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -1,34 +1,35 @@
-.normalHeader{
-  h2{
+.normalHeader {
+  h2 {
     margin-top: 30px;
   }
 }
 
-.coverHeader{
+.coverHeader {
   border: 1px solid #adbbb3;
   border-radius: 10px;
-  box-shadow: 0px 1px 1px 1px rgba(125,168,130,0.2);
-  &:hover{
+  box-shadow: 0px 1px 1px 1px rgba(125, 168, 130, 0.2);
+  &:hover {
     opacity: 0.91;
   }
 
-  img, h2{
+  img,
+  h2 {
     padding: 0;
-    margin:0;
+    margin: 0;
   }
 
-  h2{
+  h2 {
     color: #17632b;
   }
 
-  img{
-   border-radius: 10px 10px 0 0; 
-   width:100%;
-   height:250px;
-   object-fit: fill;
-  //  clip-path: inset(20px 20px 30px 40px);
+  img {
+    border-radius: 10px 10px 0 0;
+    width: 100%;
+    height: 250px;
+    object-fit: fill;
+    //  clip-path: inset(20px 20px 30px 40px);
   }
-  .content{
+  .content {
     padding: 16px;
   }
 }
